k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  namespace: my-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
      - name: my-web-app
        image: hossam789/my-web-app:latest
        ports:
          - containerPort: 8000
