k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app
  namespace: my-web-app
spec:
  selector:
    app: my-web-app
  ports:
  - port: 8000
    targetPort: 8000
